# slurmui

./: README.md  pyproject.toml
slurmui/: slurmui.py  slurmui.tcss  slurmui_cli.py
