[project]
name = "slurmui"
version = "0.3.0.5"
description = "Terminal UI for Slurm"
authors = [
    {name = "Norman Müller", email = "norman.mueller@tum.de"}
]
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "textual",
    "pandas"
]
[project.scripts]
slurmui = "slurmui.slurmui_cli:slurmui_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
