[project]
name = "slurmui"
version = "1.0.1"
description = "Terminal UI for Slurm"
authors = [
    {name = "Shenhan Qian", email = "shenhan.qian@tum.de"}
]
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "textual",
    "pandas"
]
[project.scripts]
slurmui = "slurmui.slurmui_cli:slurmui_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
